src/tui/snapshots/chess__tui__board__tests__image_halfblocks_knight_23x11.snap
---
source: src/tui/board.rs
expression: "pixels(buf, area, pal.dark)"
---
|                     |
|                     |
|                     |
|     ++++++          |
|     +###+#++        |
|     ++++o++#++      |
|    +#+oooooo+#+     |
|    ++++oooooo+#+    |
|   +#++oooooooo++    |
|   ++ooooo++oooo++   |
|  +#oooooo++oooo++   |
|  ++ooooo+#ooooo+#   |
|  #++oo+++#oooooo#+  |
|  #++++#+++oooooo++  |
|  ++###+++ooooooo++  |
|  +++#++#+ooooooo++  |
|      +#+oooooooo++  |
|      ++ooooooooo++  |
|      #++++++++++#+  |
|      +++++++++++++  |
|                     |
|                     |
