src/tui/snapshots/chess__tui__board__tests__start_3x1.snap
---
source: src/tui/board.rs
expression: terminal.backend()
---
"                               "
"   8 ♜  ♞  ♝  ♛  ♚  ♝  ♞  ♜    "
"   7 ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎    "
"   6                           "
"   5                           "
"   4                           "
"   3                           "
"   2 ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎    "
"   1 ♜  ♞  ♝  ♛  ♚  ♝  ♞  ♜    "
"     a  b  c  d  e  f  g  h    "
"                               "
