src/tui/snapshots/chess__tui__board__tests__start_3x1_flipped.snap
---
source: src/tui/board.rs
expression: terminal.backend()
---
"                               "
"   1 ♜  ♞  ♝  ♚  ♛  ♝  ♞  ♜    "
"   2 ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎    "
"   3                           "
"   4                           "
"   5                           "
"   6                           "
"   7 ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎  ♟︎    "
"   8 ♜  ♞  ♝  ♚  ♛  ♝  ♞  ♜    "
"     h  g  f  e  d  c  b  a    "
"                               "
