src/tui/snapshots/chess__tui__board__tests__start_5x2_ascii.snap
---
source: src/tui/board.rs
expression: terminal.backend()
---
"8  r    n    b    q    k    b    n    r  "
"                                         "
"7  p    p    p    p    p    p    p    p  "
"                                         "
"6                                        "
"                                         "
"5                                        "
"                                         "
"4                                        "
"                                         "
"3                                        "
"                                         "
"2  P    P    P    P    P    P    P    P  "
"                                         "
"1  R    N    B    Q    K    B    N    R  "
"                                         "
"   a    b    c    d    e    f    g    h  "
